# rhc-worker-playbook

./: .flake8  .gitignore  .gitlab-ci.yml  .packit.yaml  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  develop-setup.sh  go.mod  go.sum  main.go  make-proto.sh  meson.build  pytest.ini  rhc-ansible-worker.spec  rhc-worker-playbook.spec  rhc-worker-playbook.spec.in  rhc-worker-playbook.spec.rpkg  rhc-worker-playbook.toml  setup.py  test-requirements.txt  tox.ini  worker.go  worker_test.go
.github/workflows/: dist.yml  go.yml  lint.yml  pre-commit.yml  stylish.yml  tag-release.yml  unit-test.yml  update-version.yml
ansible/: README.md  install.sh  meson.build  requirements.yml
build-aux/: vendor.sh
data/: meson.build  rhc-worker-playbook.toml
data/dbus/: com.redhat.Yggdrasil1.Worker1.rhc_worker_playbook.conf.in  com.redhat.Yggdrasil1.Worker1.rhc_worker_playbook.service.in  meson.build
data/systemd/: com.redhat.Yggdrasil1.Worker1.rhc_worker_playbook.service.in  meson.build
integration-tests/: conftest.py  requirements.txt  test_rhc_worker_playbook.py
integration-tests/resources/: create_file.yml  invalidSignatureExclude.yaml  pause1m.yml
integration-tests/utils/: __init__.py
internal/ansible/: ansible.go  ansible_test.go  event_manager.go  runner.types.go
internal/config/: config.go
internal/constants/: constants.go
internal/exec/: exec.go  exec_test.go
internal/http/: client.go  client_test.go  tls.go  tls_test.go
internal/log/: log.go
python/: README.md  SHA256SUM  ansible_runner-2.4.0-py3-none-any.whl  ansible_runner-2.4.3-py3-none-any.whl  cython-3.2.6-py3-none-any.whl  importlib_metadata-4.6.4-py3-none-any.whl  importlib_metadata-9.0.0-py3-none-any.whl  install.sh  meson.build  python_daemon-3.0.1-py3-none-any.whl  python_daemon-3.1.2-py3-none-any.whl  requirements.in  requirements.txt  setuptools-71.1.0-py3-none-any.whl  zipp-3.2.0-py3-none-any.whl
rhc_ansible_worker/: constants.py  server.py
rhc_worker_playbook/: constants.py  constants.py.in  core_update.py  dispatcher_events.py  events.py  filter_event.py  log.py  sample_playbook.yml  server.py  test_events.py
rhc_worker_playbook/protocol/: yggdrasil_pb2.py  yggdrasil_pb2_grpc.py
rhc_worker_playbook/tests/unit/: test_filter_event.py  test_server.py
scripts/: rhc-worker-playbook.worker  rhc-worker-playbook.worker.in
systemtest/plans/: main.fmf
systemtest/tests/basic/: main.fmf  test.sh
systemtest/tests/integration/: test.sh
testdata/: insights_remove.yml
ygg/: server.py  test.py
ygg/contrib/ansible_runner/: utils.py
ygg/contrib/ansible_runner-1.4.6.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
ygg/protocol/: yggdrasil_pb2.py  yggdrasil_pb2_grpc.py
(+4 files in other folders)
